<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserGuide">

    <Button
        android:id="@+id/buttonUserRecording"
        android:layout_width="163dp"
        android:layout_height="93dp"
        android:text="@string/set_user_audio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <Button
        android:id="@+id/buttonUserEmergency"
        android:layout_width="163dp"
        android:layout_height="93dp"
        android:text="@string/emergency_user_guide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/buttonUserContact"
        android:layout_width="163dp"
        android:layout_height="93dp"
        android:text="@string/user_add_contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toEndOf="@+id/buttonUserRecording"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <Button
        android:id="@+id/buttonUserHelpDoc"
        android:layout_width="163dp"
        android:layout_height="93dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/user_help_doc"
        app:layout_constraintBottom_toTopOf="@+id/buttonUserFirstAid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUserRecording"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/buttonTwoWheeler"
        android:layout_width="163dp"
        android:layout_height="93dp"
        android:text="@string/user_two_whheler"
        app:layout_constraintBottom_toTopOf="@+id/buttonUserMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonUserHelpDoc"
        app:layout_constraintTop_toBottomOf="@+id/buttonUserContact" />

    <Button
        android:id="@+id/buttonUserMessage"
        android:layout_width="163dp"
        android:layout_height="93dp"
        android:layout_marginTop="248dp"
        android:text="@string/edit_em_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonUserFirstAid"
        app:layout_constraintTop_toBottomOf="@+id/buttonUserContact" />

    <Button
        android:id="@+id/buttonUserFirstAid"
        android:layout_width="163dp"
        android:layout_height="93dp"
        android:layout_marginTop="248dp"
        android:text="@string/user_first_aid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUserRecording"
        app:layout_constraintVertical_bias="0.504" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:layout_marginBottom="7dp"
        android:text="@string/user_guide"
        app:layout_constraintBottom_toTopOf="@+id/buttonUserEmergency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />
</androidx.constraintlayout.widget.ConstraintLayout>